--- a/package.json
+++ b/package.json
@@ -18,11 +18,18 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "adler-32": "^1.3.1",
     "bootstrap": "^5.0.1",
     "bootstrap-icons": "^1.11.3",
+    "crc": "^4.3.2",
+    "crypto-browserify": "^3.12.0",
     "jquery": "^3.7.1",
+    "js-sha3": "^0.9.3",
+    "ripemd160": "^2.0.2",
     "rxjs": "~7.8.0",
+    "stream-browserify": "^3.0.0",
     "tslib": "^2.3.0",
+    "whirlpool-hash": "^1.1.6",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
