--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "rxjs": "~7.8.0",
     "stream-browserify": "^3.0.0",
     "tslib": "^2.3.0",
+    "uuid": "^10.0.0",
     "whirlpool-hash": "^1.1.6",
     "zone.js": "~0.13.0"
   },
@@ -37,6 +38,7 @@
     "@angular/cli": "^16.2.8",
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/uuid": "^10.0.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
