--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ripemd160": "^2.0.2",
     "rxjs": "~7.8.0",
     "stream-browserify": "^3.0.0",
+    "to-words": "^4.0.1",
     "tslib": "^2.3.0",
     "uuid": "^10.0.0",
     "whirlpool-hash": "^1.1.6",
