--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
     "@angular/forms": "^16.2.0",
+    "@angular/material": "^16.2.0",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
@@ -23,8 +24,11 @@
     "bootstrap-icons": "^1.11.3",
     "crc": "^4.3.2",
     "crypto-browserify": "^3.12.0",
+    "cssbeautify": "^0.3.1",
     "jquery": "^3.7.1",
     "js-sha3": "^0.9.3",
+    "monaco-editor": "^0.50.0",
+    "ngx-monaco-editor-v2": "^16.0.1",
     "ripemd160": "^2.0.2",
     "rxjs": "~7.8.0",
     "stream-browserify": "^3.0.0",
@@ -38,6 +42,7 @@
     "@angular-devkit/build-angular": "^16.2.8",
     "@angular/cli": "^16.2.8",
     "@angular/compiler-cli": "^16.2.0",
+    "@types/cssbeautify": "^0.3.5",
     "@types/jasmine": "~4.3.0",
     "@types/uuid": "^10.0.0",
     "jasmine-core": "~4.6.0",
