--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "crypto-browserify": "^3.12.0",
     "cssbeautify": "^0.3.1",
     "jquery": "^3.7.1",
+    "js-beautify": "^1.15.1",
     "js-sha3": "^0.9.3",
     "monaco-editor": "^0.50.0",
     "ngx-monaco-editor-v2": "^16.0.1",
@@ -44,6 +45,7 @@
     "@angular/compiler-cli": "^16.2.0",
     "@types/cssbeautify": "^0.3.5",
     "@types/jasmine": "~4.3.0",
+    "@types/js-beautify": "^1.14.3",
     "@types/uuid": "^10.0.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
