refactor(barcode-generator): refactor and optimize code feat(qr-code): implement QR code generator tool

--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "@angular/router": "^16.2.0",
     "@syncfusion/ej2-angular-barcode-generator": "^26.1.42",
     "adler-32": "^1.3.1",
+    "angularx-qrcode": "^17.0.1",
     "bootstrap": "^5.0.1",
     "bootstrap-icons": "^1.11.3",
     "crc": "^4.3.2",
     "crypto-browserify": "^3.12.0",
     "cssbeautify": "^0.3.1",
-    "html2canvas": "^1.4.1",
     "jquery": "^3.7.1",
     "js-beautify": "^1.15.1",
     "js-sha3": "^0.9.3",
